--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "devDependencies": {
+    "babel-eslint": "7.2.3",
     "chai": "4.1.0",
+    "eslint": "4.3.0",
     "mocha": "3.4.2"
   },
   "name": "typesafe",
